# hyper-sentinel-sdk

./: .gitignore  Makefile  README.md  WHY_v050.md  brief.html  pyproject.toml
.agents/workflows/: pre-deploy.md  sdk-release-cycle.md  ship-release.md  ship.md
hyper_sentinel-0.5.0/: README.md  pyproject.toml
hyper_sentinel-0.5.0/src/hyper_sentinel/: __init__.py
hyper_sentinel-0.5.0/src/sentinel/: __init__.py  chat.py  cli.py  client.py  exceptions.py  server.py  swarm.py  tool_registry.py  vault.py
hyper_sentinel-0.5.0/src/sentinel/api/: __init__.py  auth.py  client.py  errors.py
hyper_sentinel-0.5.0/src/sentinel/api/resources/: keys.py  tools.py
hyper_sentinel-0.5.0/src/sentinel/scrapers/: __init__.py  dexscreener.py  discord.py  polymarket.py  ta.py  telegram.py  usage.py  x.py
hyper_sentinel-0.5.0/tests/: test_client.py  test_integration.py
scripts/: smoke_test.py
src/sentinel/: __init__.py  chat.py  cli.py  client.py  exceptions.py  memory.py
src/sentinel/api/: _http.py  auth.py  client.py
src/sentinel/api/resources/: __init__.py  billing.py  chat.py  market.py  trade.py  vault.py
src/sentinel/scrapers/: crypto.py  dexscreener.py  hyperliquid.py  portfolio.py
tests/: conftest.py  test_client.py
