[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyper-sentinel"
version = "0.3.7"
description = "Python SDK + AI Agent for Sentinel — 80+ crypto trading, AI, and market intelligence tools with interactive chat. Free access, usage-based fees."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    {name = "Sentinel Labs", email = "dev@hyper-sentinel.com"},
]
keywords = ["crypto", "trading", "ai", "defi", "hyperliquid", "aster", "polymarket", "sentinel", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0",
    "requests>=2.31.0",
    "yfinance>=0.2.0",
]

[project.scripts]
sentinel = "sentinel.cli:main"
sentinel-setup = "sentinel.cli:setup"
sentinel-chat = "sentinel.chat:_entry_chat"

[project.optional-dependencies]
serve = ["fastapi>=0.111.0", "uvicorn[standard]>=0.29.0"]
swarm = ["upsonic>=0.30.0"]
async = ["httpx[http2]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "build", "twine"]

[project.urls]
Homepage = "https://hyper-sentinel.com"
Documentation = "https://hyper-sentinel.com/docs"
Repository = "https://github.com/hyper-sentinel/hyper-sentinel-sdk"
Issues = "https://github.com/hyper-sentinel/hyper-sentinel-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: hits live Cloud Run API (deselect with '-m not integration')",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "build>=1.4.2",
    "twine>=6.2.0",
]
